Gorn leads the NH to the rock fortress instead of running ahead of him.
Greg will comment in Jharkendar if the player did not finish his treasure hunt quest in Khorinis.
Greg yelling at Francis makes Francis immediately get up, instead of at a later point in the dialog.
Grimbald gives NH experience for killed snappers.
Grimbald makes a remark once the hunt is over.
Guard (1061) at Dexter's camp does not react to weapons or magic before talking to NH at least once.
Hagen actually takes Cornelius' diary from NH.
Hagen can only be told about carrying the eye if NH has it.
Hagen will hint at NH joining paladins only when all requirements are fulfilled.
Hagen will not make NH paladin before delivering the report from Valley of Mines to avoid issue with Pedro not letting NH in monastery.
Hagens dialog has 1 more previously inaccessible dialogue lines.
Halvor is not given the compromising note for reading.
Hanna has 16 lines of dialogue and new interaction restored related to the thieves' guild.
Hanna will not take Lehmar's book of debts if NH ratted out on thieves' guild.
Harad accepts any orc weapon for his quest.
Harad will take the best orc weapon NH has and inspect it before commenting on it.
Henry will consider all higher tier armor as luxurious and will comment appropriately.
Henry will only ask NH "friend or foe" once.
Hermit doesn't care about what armor NH is wearing.
Highwayman hides if he sees NH coming with Lares.
Highwayman is not a friendly to Seekers, he will be dead in chapter 3.
Highwayman only appears after returning from the Valley of Mines.
Hilda only takes the required 20 turnips instead of all of them.
Hilda will continue her normal routine in the next chapter if she is cured of her illness.
Hilda will stop her dialog when she says she will see whether the new pan is any good.
Hilda's dialog still includes NH's line asking for something to eat, even if she declines.
Hodges can be asked about why Bennet was arrested after asking what happened.